// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action Creator: IP Pools createPool dispatches create action 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "auto_warmup_overflow_pool": "overflow",
        "name": "pool 1",
        "signing_domain": "",
      },
      "method": "POST",
      "url": "/v1/ip-pools",
    },
    "type": "CREATE_IP_POOL",
  },
]
`;

exports[`Action Creator: IP Pools listPools dispatches list action 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "GET",
      "showErrorAlert": false,
      "url": "/v1/ip-pools",
    },
    "type": "LIST_IP_POOLS",
  },
]
`;
